--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/framework
+spring.datasource.username=postgres
+spring.datasource.password=framework
+
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=DEBUG
+logging.level.org.springframework.security=DEBUG
