Add. Crud user.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=framework
 
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=DEBUG
