--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ logging.level.org.springframework.security=DEBUG
 
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=10MB
+
+framework.storage.local.diretorio-fotos=/home/jefferson/jefferson/entrevistas/FrameWork/fotos
