Start add security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=10MB
 
 framework.storage.local.diretorio-fotos=/home/jefferson/jefferson/entrevistas/FrameWork/fotos
+
+spring.security.user.name=jefferson
+spring.security.user.password=123456
