--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,9 @@ spring.servlet.multipart.max-request-size=10MB
 
 framework.storage.local.diretorio-fotos=/home/jefferson/jefferson/entrevistas/FrameWork/fotos
 
-spring.security.user.name=jefferson
-spring.security.user.password=123456
+#spring.security.user.name=jefferson
+#spring.security.user.password=123456
+
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
+spring.security.oauth2.resourceserver.opaquetoken.client-id=framework-web
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=web123
