--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,7 @@ framework.storage.local.diretorio-fotos=/home/jefferson/jefferson/entrevistas/Fr
 #spring.security.user.password=123456
 
 spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
- spring.security.oauth2.resourceserver.opaquetoken.client-id=framework-web
+spring.security.oauth2.resourceserver.opaquetoken.client-id=framework-web
 spring.security.oauth2.resourceserver.opaquetoken.client-secret=web123
+
+# spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8081/oauth/check_token/.well-known/jwks.json
