Config ResourceServerConfig.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,10 @@ framework.storage.local.diretorio-fotos=/home/jefferson/jefferson/entrevistas/Fr
 #spring.security.user.name=jefferson
 #spring.security.user.password=123456
 
-spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
-spring.security.oauth2.resourceserver.opaquetoken.client-id=framework-web
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=web123
+# spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
+# spring.security.oauth2.resourceserver.opaquetoken.client-id=framework-web
+# spring.security.oauth2.resourceserver.opaquetoken.client-secret=web123
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/oauth/check_token
 
 # spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8081/oauth/check_token/.well-known/jwks.json
