--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<version>${oauth2-oidc-sdk.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
